# graph-ml-pycon-2025

./: counterfactuals.html  counterfactuals.md  graphml.html  graphml.md  make_slides.sh  pyproject.toml
css/: aib.css
notebooks/: graphml.ipynb  graphml_cora.ipynb
